[gd_scene load_steps=24 format=2]

[ext_resource path="res://resourses/scenes/GameMaster.gd" type="Script" id=1]
[ext_resource path="res://resourses/scenes/terrain/MapMaster.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/kenney-ui/PNG/green_button12.png" type="Texture" id=3]
[ext_resource path="res://resourses/character/EnemyCraftController.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/kenney-ui/PNG/red_button12.png" type="Texture" id=5]
[ext_resource path="res://resourses/character/PlayerCraftController.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/kenney-ui/PNG/red_button00.png" type="Texture" id=8]
[ext_resource path="res://resourses/scenes/ui/SettingsContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://resourses/scenes/PauseMenu.gd" type="Script" id=10]
[ext_resource path="res://assets/kenney-ui/Font/kenvector_future.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://resourses/scenes/terrain/BorderWinds.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/kenney-ui-space/PNG/square_shadow.png" type="Texture" id=15]
[ext_resource path="res://assets/kenney-ui/PNG/red_button03.png" type="Texture" id=16]
[ext_resource path="res://assets/kenney-ui/PNG/grey_button12.png" type="Texture" id=17]
[ext_resource path="res://assets/icons8-ammo-96.png" type="Texture" id=18]
[ext_resource path="res://resourses/scenes/terrain/BorderDamageArea.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/icons8-hammer-96.png" type="Texture" id=20]
[ext_resource path="res://resourses/default_ui.theme" type="Theme" id=21]
[ext_resource path="res://assets/icons8-nebula-96.png" type="Texture" id=22]
[ext_resource path="res://resourses/scenes/GUI.gd" type="Script" id=23]
[ext_resource path="res://assets/icons8-missile-96.png" type="Texture" id=24]
[ext_resource path="res://resourses/scenes/BackupCamera.gd" type="Script" id=25]

[sub_resource type="DynamicFont" id=14]
size = 72
font_data = ExtResource( 11 )

[node name="GameMaster" type="Node"]
script = ExtResource( 1 )
player_controller = ExtResource( 6 )
enemy_controller = ExtResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 0 )
shadow_enabled = true

[node name="MapMaster" parent="." instance=ExtResource( 2 )]
border_wind_scene = ExtResource( 14 )
border_damage_area_scene = ExtResource( 19 )
border_wind_dimension = 4
wind_border_width = 64
terrain_size = 64

[node name="TerrainGridMap" parent="MapMaster" index="0"]
noise_period = 22.0

[node name="ObjectGenerator" parent="MapMaster/TerrainGridMap" index="0"]
cluster_chance = 1000

[node name="PlayerCraftController" parent="." instance=ExtResource( 6 )]

[node name="EnemyCraftController" parent="." instance=ExtResource( 4 )]

[node name="GUI" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 23 )

[node name="ModeSetButtons" type="HBoxContainer" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Air" type="TextureButton" parent="GUI/ModeSetButtons"]
margin_right = 49.0
margin_bottom = 49.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )

[node name="Image" type="TextureRect" parent="GUI/ModeSetButtons/Air"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 18 )
expand = true
stretch_mode = 4

[node name="Image2" type="TextureRect" parent="GUI/ModeSetButtons/Air"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 24 )
expand = true
stretch_mode = 4
flip_h = true

[node name="VSeparator" type="VSeparator" parent="GUI/ModeSetButtons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 53.0
margin_right = 57.0
margin_bottom = 49.0

[node name="Build" type="TextureButton" parent="GUI/ModeSetButtons"]
margin_left = 61.0
margin_right = 110.0
margin_bottom = 49.0
theme = ExtResource( 21 )
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )

[node name="Image" type="TextureRect" parent="GUI/ModeSetButtons/Build"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 20 )

[node name="HPBarContainer" type="MarginContainer" parent="GUI"]
anchor_left = 0.03
anchor_top = 0.5
anchor_right = 0.06
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="HPBar" type="TextureProgress" parent="GUI/HPBarContainer"]
margin_right = 38.0
margin_bottom = 324.0
value = 100.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 3 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="ScoreContainer" type="HBoxContainer" parent="GUI"]
anchor_left = 0.85
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.1
grow_horizontal = 0

[node name="Icon" type="TextureRect" parent="GUI/ScoreContainer"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 22 )

[node name="Score" type="Label" parent="GUI/ScoreContainer"]
margin_left = 100.0
margin_top = 39.0
margin_right = 113.0
margin_bottom = 57.0
theme = ExtResource( 21 )
text = "0"

[node name="BackupCamera" type="Camera" parent="."]
pause_mode = 2
transform = Transform( 0.707107, 0.707107, 3.09086e-08, 0, -4.37114e-08, 1, 0.707107, -0.707107, -3.09086e-08, 0, 20, 0 )
script = ExtResource( 25 )

[node name="PauseMenu" type="ReferenceRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="GameOverContainer" type="CenterContainer" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/GameOverContainer"]
margin_left = 382.0
margin_top = 308.0
margin_right = 898.0
margin_bottom = 411.0

[node name="Label" type="Label" parent="PauseMenu/GameOverContainer/VBoxContainer"]
margin_right = 516.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 14 )
text = "Game over"
align = 1

[node name="Score" type="Label" parent="PauseMenu/GameOverContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 516.0
margin_bottom = 103.0
text = "Space harvested: 0"
align = 1

[node name="WinContainer" type="CenterContainer" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/WinContainer"]
margin_left = 439.0
margin_top = 308.0
margin_right = 841.0
margin_bottom = 411.0

[node name="Label" type="Label" parent="PauseMenu/WinContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 14 )
text = "You Win!"
align = 1

[node name="Score" type="Label" parent="PauseMenu/WinContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 402.0
margin_bottom = 103.0
text = "Space harvested: 0"
align = 1

[node name="SettingsContainer" parent="PauseMenu" instance=ExtResource( 9 )]

[node name="ButtonsContainer" type="MarginContainer" parent="PauseMenu"]
anchor_left = 0.05
anchor_top = 0.07
anchor_right = 0.061
anchor_bottom = 0.07
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ButtonsContainer"]
margin_right = 190.0
margin_bottom = 192.0

[node name="ReturnButton" type="TextureButton" parent="PauseMenu/ButtonsContainer/VBoxContainer"]
margin_right = 190.0
margin_bottom = 45.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/ButtonsContainer/VBoxContainer/ReturnButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Return"
align = 1
valign = 1

[node name="SettingsButton" type="TextureButton" parent="PauseMenu/ButtonsContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 190.0
margin_bottom = 94.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/ButtonsContainer/VBoxContainer/SettingsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Settings"
align = 1
valign = 1

[node name="MainMenuButton" type="TextureButton" parent="PauseMenu/ButtonsContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 190.0
margin_bottom = 143.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/ButtonsContainer/VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Main Menu"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="PauseMenu/ButtonsContainer/VBoxContainer"]
margin_top = 147.0
margin_right = 190.0
margin_bottom = 192.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="PauseMenu/ButtonsContainer/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Quit"
align = 1
valign = 1

[connection signal="button_down" from="GUI/ModeSetButtons/Air" to="GUI" method="_on_Air_button_down"]
[connection signal="button_up" from="GUI/ModeSetButtons/Air" to="GUI" method="_on_Air_button_up"]
[connection signal="button_down" from="GUI/ModeSetButtons/Build" to="GUI" method="_on_Build_button_down"]
[connection signal="button_up" from="GUI/ModeSetButtons/Build" to="GUI" method="_on_Build_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonsContainer/VBoxContainer/ReturnButton" to="PauseMenu" method="_on_ReturnButton_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonsContainer/VBoxContainer/SettingsButton" to="PauseMenu" method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonsContainer/VBoxContainer/MainMenuButton" to="PauseMenu" method="_on_MainMenuButton_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonsContainer/VBoxContainer/QuitButton" to="PauseMenu" method="_on_QuitButton_button_up"]

[editable path="MapMaster"]
[editable path="EnemyCraftController"]
